[gd_scene load_steps=9 format=3 uid="uid://g6mjhbyvu556"]

[ext_resource type="Texture2D" uid="uid://uvn2gcq438lf" path="res://assets/backgrounds/bg_1.jpg" id="1_fkq87"]
[ext_resource type="Script" path="res://scenes/menu/options.gd" id="2_m3yom"]

[sub_resource type="LabelSettings" id="LabelSettings_plq0q"]
font_size = 141

[sub_resource type="LabelSettings" id="LabelSettings_h4ela"]
font_size = 13

[sub_resource type="LabelSettings" id="LabelSettings_h2i4e"]
font_size = 20

[sub_resource type="LabelSettings" id="LabelSettings_6j5aq"]
font_size = 20

[sub_resource type="LabelSettings" id="LabelSettings_fh3id"]
font_size = 20

[sub_resource type="LabelSettings" id="LabelSettings_0q28c"]
font_size = 20

[node name="Menu" type="Node2D"]

[node name="Content" type="MarginContainer" parent="."]
offset_left = 276.0
offset_top = 166.0
offset_right = 833.0
offset_bottom = 509.0

[node name="Background" type="Sprite2D" parent="Content"]
position = Vector2(299, 159)
scale = Vector2(1.5, 1.25781)
texture = ExtResource("1_fkq87")

[node name="VBoxContainer" type="VBoxContainer" parent="Content"]
layout_mode = 2

[node name="TitleScreen" type="VBoxContainer" parent="Content/VBoxContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="Content/VBoxContainer/TitleScreen"]
layout_mode = 2
text = "Mosquit"
label_settings = SubResource("LabelSettings_plq0q")

[node name="Version" type="Label" parent="Content/VBoxContainer/TitleScreen"]
layout_mode = 2
text = "v 0.0.1"
label_settings = SubResource("LabelSettings_h4ela")

[node name="Options" type="VBoxContainer" parent="Content/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
alignment = 1
script = ExtResource("2_m3yom")

[node name="New_Game" type="Label" parent="Content/VBoxContainer/Options"]
layout_mode = 2
mouse_filter = 1
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "New game"
label_settings = SubResource("LabelSettings_h2i4e")
horizontal_alignment = 1

[node name="Tutorial" type="Label" parent="Content/VBoxContainer/Options"]
layout_mode = 2
mouse_filter = 1
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "Tutorial"
label_settings = SubResource("LabelSettings_6j5aq")
horizontal_alignment = 1

[node name="Settings" type="Label" parent="Content/VBoxContainer/Options"]
layout_mode = 2
mouse_filter = 1
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "Settings	"
label_settings = SubResource("LabelSettings_fh3id")
horizontal_alignment = 1

[node name="Exit" type="Label" parent="Content/VBoxContainer/Options"]
layout_mode = 2
mouse_filter = 1
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "Exit"
label_settings = SubResource("LabelSettings_0q28c")
horizontal_alignment = 1

[node name="Brightness" type="CanvasModulate" parent="Content/VBoxContainer/Options"]
position = Vector2(-503, -385)
color = Color(0.462745, 0.462745, 0.462745, 1)

[connection signal="gui_input" from="Content/VBoxContainer/Options/New_Game" to="Content/VBoxContainer/Options" method="_on_new_game_gui_input"]
[connection signal="mouse_entered" from="Content/VBoxContainer/Options/New_Game" to="Content/VBoxContainer/Options" method="_on_new_game_mouse_entered"]
[connection signal="mouse_exited" from="Content/VBoxContainer/Options/New_Game" to="Content/VBoxContainer/Options" method="_on_new_game_mouse_exited"]
[connection signal="gui_input" from="Content/VBoxContainer/Options/Tutorial" to="Content/VBoxContainer/Options" method="_on_tutorial_gui_input"]
[connection signal="mouse_entered" from="Content/VBoxContainer/Options/Tutorial" to="Content/VBoxContainer/Options" method="_on_tutorial_mouse_entered"]
[connection signal="mouse_exited" from="Content/VBoxContainer/Options/Tutorial" to="Content/VBoxContainer/Options" method="_on_tutorial_mouse_exited"]
[connection signal="gui_input" from="Content/VBoxContainer/Options/Settings" to="Content/VBoxContainer/Options" method="_on_settings_gui_input"]
[connection signal="mouse_entered" from="Content/VBoxContainer/Options/Settings" to="Content/VBoxContainer/Options" method="_on_settings_mouse_entered"]
[connection signal="mouse_exited" from="Content/VBoxContainer/Options/Settings" to="Content/VBoxContainer/Options" method="_on_settings_mouse_exited"]
[connection signal="gui_input" from="Content/VBoxContainer/Options/Exit" to="Content/VBoxContainer/Options" method="_on_exit_gui_input"]
[connection signal="mouse_entered" from="Content/VBoxContainer/Options/Exit" to="Content/VBoxContainer/Options" method="_on_exit_mouse_entered"]
[connection signal="mouse_exited" from="Content/VBoxContainer/Options/Exit" to="Content/VBoxContainer/Options" method="_on_exit_mouse_exited"]
